<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:background="@drawable/black_sqaure_rounded_corners"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/weight"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:gravity="center"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/enter_your_updated_weight"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:gravity="center"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/weight_dialog_weight"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:inputType="numberDecimal"
            app:met_primaryColor="@color/colorPrimaryDark"
            android:textColor="@color/colorText"
            app:met_baseColor="@color/colorSecondary"
            app:met_underlineColor="@color/colorSecondary"
            app:met_hideUnderline="false"
            android:hint="@string/weight_hint"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/weight_dialog_lb"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:background="@drawable/blue_button_rounded_un_selected"
                android:text="@string/lb"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="6dp" />
            <TextView
                android:id="@+id/weight_dialog_kg"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:background="@drawable/blue_button_rounded_un_selected"
                android:text="@string/kg"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="end">
        <TextView
            android:id="@+id/weight_dialog_cancel"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textSize="13sp"
            android:textColor="@color/colorText"
            android:text="@string/cancel"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:id="@+id/weight_dialog_save"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:background="@drawable/blue_button_rounder_corners"
            android:textSize="13sp"
            android:textColor="@color/colorText"
            android:text="@string/save"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            />
    </LinearLayout>


</LinearLayout>