<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/recent_list_view_name"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/recent_list_view_amount"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/recent_list_view_calorie"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/calorie"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp" />
</LinearLayout>
