<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_basics"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".05"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/get_age_age"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:inputType="number"
        app:met_primaryColor="@color/colorPrimaryDark"
        android:textColor="@color/colorText"
        app:met_baseColor="@color/colorSecondary"
        app:met_underlineColor="@color/colorSecondary"
        app:met_hideUnderline="false"
        app:met_errorColor="@color/colorError"
        android:hint="@string/age_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5"/>

    <TextView
        android:id="@+id/get_age_next"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:background="@drawable/blue_button_rounded_un_selected"
        android:text="@string/next"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".9"/>

</androidx.constraintlayout.widget.ConstraintLayout>